# finetune

./: .gitignore  CLAUDE.md  DATASETS.md  README.md  accelerate_config_fsdp.yaml  aime_2025_eval_results.json  appworld_train_data_20250613_180522.csv  pyproject.toml  template_prompt
docs/: GRPO_CONVERSATION_GUIDE.md
experiments/outputs/minimal_react_agent/tasks/82e2fac_1/logs/: environment_io.md
finetune/: appworld_env.py  appworld_eval.py  appworld_test.py  appworld_trajectory_extractor.py  dataset_processor.py  dataset_transformation.py  debug_trl_grpo.py  eval_utils.py  ground_truth_utils.py  grpo_appworld.py  grpo_conversation_simple.py  grpo_conversation_trainer.py  grpo_math_trainer.py  model_utils.py  ppo_only.py  test_grpo_appworld.py  test_grpo_appworld_lora.py  utils.py  vllm_utils.py  vllm_utils_workerwrap.py
finetune/distill/: distillation_gkd_trainer.py  distillation_trainer.py  eval.py  eval_vllm.py
finetune/distill/config/: distillation_config.json
finetune/environment/: appworld_env.py
finetune/environment/appworld_main/: __init__.py
finetune/environment/appworld_main/.source/: apps.bundle  tests.bundle
finetune/examples/sft/: appworld.py  gpt_oss.ipynb
finetune/prompts/: appworld.py
finetune/trainers/: grpo_env_trainer.py
finetune/trl_main/: __init__.py  mergekit_utils.py
finetune/trl_main/scripts/: chat.py  dpo.py  grpo.py  kto.py  sft.py  vllm_serve.py
finetune/trl_main/trainer/: __init__.py  grpo_env_config.py  grpo_env_trainer.py  nash_md_config.py  xpo_config.py
finetune/vllm/: vllm_client.py  vllm_server.py
scripts/dataset/: dl_dataset.sh
scripts/download/: dl_model.sh
scripts/train/: distillation_example.sh  ppo_only.sh
(+1 files in other folders)
