[project]
name = "finetune"
version = "0.1.0"
description = "Fine-tuning for language models with PPO"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.1.1",
    "torch>=2.6.0",
    "numpy<2",
    "ray[default]>=2.44.1",
    "transformers>=4.46.3",
    "deepspeed==0.15.4", # 0.16.0 bugs out https://github.com/microsoft/DeepSpeed/issues/6793
    "vllm>=0.8.5",
    "datasets>=3.1.0",
    "packaging>=24.2",
    "setuptools>=75.6.0",
    "wheel>=0.45.1",
    "tensorboard>=2.18.0",
    "lora>=0.3.0",
    "peft>=0.15.2",
    "math-verify>=0.7.0",
    "bs4>=0.0.2",
    "pycryptodome>=3.23.0",
    "huggingface-hub>=0.32.4",
    "trl>=0.19.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["finetune"]

# flash-attn related setups
[project.optional-dependencies]
compile = ["flash-attn>=2.7.2.post1"]
liger = ["liger-kernel>=0.5.4"]

[tool.uv]
python-preference = "only-managed"
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.2.post1"
requires-dist = ["torch", "setuptools"]
